# pico2.lcdsample

./: .clang-format  .gitignore  CMakeLists.txt  README.md  make.md
app/: CMakeLists.txt
app/inc/user/: canvas.h  console.h  cst328drv.h  font.h  fontx2.h  lcddrv.h  linkedlist.h  log.h  macros.h  pwmaudiodrv.h  spidrv.h  textbox.h  touchdrv.h  types.h  utf8string.h
app/src/: canvas.c  console.c  cst328drv.c  font.c  fontx2.c  lcddrv.c  linkedlist.c  main.c  pwmaudiodrv.c  spidrv.c  textbox.c  touchdrv.c  utf8string.c
app/src/charcode/: sjis0213_2004_utf32.h  utf32_sjis0213_2004.h
app/src/font/: 4X8.h  ILGH16XB.h  KONATSU_16x16.h  KONATSU_16x16_ANK.h
app/src/resources/: wallpaper.h
libs/: .gitignore
